fixes alignments in larger views, still needs TLC in mobile views

--- a/app/assets/stylesheets/overrides/bookmarks.scss
+++ b/app/assets/stylesheets/overrides/bookmarks.scss
@@ -3,3 +3,12 @@
     background-color: $gray-light !important;
   }
 }
+
+.bookmarks-thumbnail-container .index-document-functions{
+  margin-top: -0.5em;
+}
+
+.toggle-bookmark {
+  text-align:right;
+  margin-left: -1em;
+}
