--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6 .facets, .facets-heading {
 }
 
 h1, h2, h3, h4, h5, h6, .st__content-block, .content-block {
-  margin: 1em 0 0.5em;
+  margin: 1em 0 1em;
 }
 
 h1 {
@@ -45,4 +45,8 @@ h1 {
 
 .form-select.search-field {
   background-color: $light;
+}
+
+.documents-list .document .document-thumbnail {
+  padding-left: 1rem;
 }
